[package]
name = "pothook"
version = "0.1.2"
description = ""
authors = ["acknak"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
hound = "3.5"
tauri = { version = "1.5", features = [
    "fs-write-file",
    "protocol-all",
    "dialog-message",
    "dialog-open",
    "dialog-save",
    "shell-open",
    "dialog-ask",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"
whisper-rs = "0.10"
whisper-rs-sys = "0.8"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.14"
once_cell = "1.19.0"

# for windows (cross compile from mac_os)
# cargo tauri build --target x86_64-pc-windows-msvc --runner cargo-xwin

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "f1c6efee2245009540dde947e0e3d008f3aa7dbb"
dependencies = ["pthread"]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
